--- a/Energize.Web/ClientApp/package.json
+++ b/Energize.Web/ClientApp/package.json
@@ -1,21 +1,33 @@
 {
-    "name": "Energize.Web",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "bootstrap": "^3.4.1",
-        "react": "^16.8.6",
-        "react-bootstrap": "^0.31.5",
-        "react-dom": "^16.8.6",
-        "react-router-bootstrap": "^0.24.4",
-        "react-router-dom": "^4.3.1",
-        "react-scripts": "1.0.17",
-        "rimraf": "^2.6.3"
-    },
-    "scripts": {
-        "start": "rimraf ./build && react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    }
+  "name": "Energize.Web",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "^3.4.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.8.6",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.0.1",
+    "rimraf": "^2.6.3"
+  },
+  "scripts": {
+    "start": "rimraf ./build && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
